--- a/vanilla-oauth/package.json
+++ b/vanilla-oauth/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others \"npm run api\" \"npm run auth-with-login\" \"serve\"",
+    "start": "concurrently --kill-others \"npm run api\" \"npm run auth\" \"serve\"",
     "api": "node ../server/api",
-    "auth": "node ../server/auth",
+    "auth": "node ../server/auth-with-login",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joel Lord",
