--- a/vuejs-auth0/package.json
+++ b/vuejs-auth0/package.json
@@ -13,6 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "auth0-js": "^9.4.2",
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
