--- a/passwordless-magiclink/package.json
+++ b/passwordless-magiclink/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently --kill-others \"npm run api\" \"npm run auth\" \"serve\"",
-    "api": "node ../server/api",
-    "auth": "node ../server/auth",
+    "api": "nodemon ../server/api",
+    "auth": "nodemon ../server/passwordless-magiclink",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joel Lord",
